@@ -16,23 +16,35 @@ defined('JPATH_BASE') or die;
  */
 class JDatabaseQueryElement
 {
-	/** @var string The name of the element */
+	/**
+	 * @var		string	The name of the element.
+	 * @since	1.6
+	 */
 	protected $_name = null;
 
-	/** @var array An array of elements */
+	/**
+	 * @var		array	An array of elements.
+	 * @since	1.6
+	 */
 	protected $_elements = null;
 
-	/** @var string Glue piece */
+	/**
+	 * @var		string	Glue piece.
+	 * @since	1.6
+	 */
 	protected $_glue = null;
 
 	/**
 	 * Constructor.
 	 *
-	 * @param	string	The name of the element.
-	 * @param	mixed	String or array.
-	 * @param	string	The glue for elements.
+	 * @param	string	$name		The name of the element.
+	 * @param	mixed	$elements	String or array.
+	 * @param	string	$glue		The glue for elements.
+	 *
+	 * @return	JDatabaseQueryElement
+	 * @since	1.6
 	 */
-	public function __construct($name, $elements, $glue=',')
+	public function __construct($name, $elements, $glue = ',')
 	{
 		$this->_elements	= array();
 		$this->_name		= $name;
@@ -41,6 +53,12 @@ class JDatabaseQueryElement
 		$this->append($elements);
 	}
 
+	/**
+	 * Magic function to convert the query element to a string.
+	 *
+	 * @return	string
+	 * @since	1.6
+	 */
 	public function __toString()
 	{
 		return PHP_EOL.$this->_name.' '.implode($this->_glue, $this->_elements);
@@ -50,12 +68,16 @@ class JDatabaseQueryElement
 	 * Appends element parts to the internal list.
 	 *
 	 * @param	mixed	String or array.
+	 *
+	 * @return	void
+	 * @since	1.6
 	 */
 	public function append($elements)
 	{
 		if (is_array($elements)) {
 			$this->_elements = array_unique(array_merge($this->_elements, $elements));
-		} else {
+		}
+		else {
 			$this->_elements = array_unique(array_merge($this->_elements, array($elements)));
 		}
 	}
@@ -70,87 +92,138 @@ class JDatabaseQueryElement
  */
 class JDatabaseQuery
 {
-	/** @var string The query type */
+	/**
+	 * @var		string	The query type.
+	 * @since	1.6
+	 */
 	protected $_type = '';
 
-	/** @var object The select element */
+	/**
+	 * @var		object	The select element.
+	 * @since	1.6
+	 */
 	protected $_select = null;
 
-	/** @var object The delete element */
+	/**
+	 * @var		object	The delete element.
+	 * @since	1.6
+	 */
 	protected $_delete = null;
 
-	/** @var object The update element */
+	/**
+	 * @var		object	The update element.
+	 * @since	1.6
+	 */
 	protected $_update = null;
 
-	/** @var object The insert element */
+	/**
+	 * @var		object	The insert element.
+	 * @since	1.6
+	 */
 	protected $_insert = null;
 
-	/** @var object The from element */
+	/**
+	 * @var		object	The from element.
+	 * @since	1.6
+	 */
 	protected $_from = null;
 
-	/** @var object The join element */
+	/**
+	 * @var		object	The join element.
+	 * @since	1.6
+	 */
 	protected $_join = null;
 
-	/** @var object The set element */
+	/**
+	 * @var		object	The set element.
+	 * @since	1.6
+	 */
 	protected $_set = null;
 
-	/** @var object The where element */
+	/**
+	 * @var		object	The where element.
+	 * @since	1.6
+	 */
 	protected $_where = null;
 
-	/** @var object The where element */
+	/**
+	 * @var		object	The group by element.
+	 * @since	1.6
+	 */
 	protected $_group = null;
 
-	/** @var object The where element */
+	/**
+	 * @var		object	The having element.
+	 * @since	1.6
+	 */
 	protected $_having = null;
 
-	/** @var object The where element */
+	/**
+	 * @var		object	The order element.
+	 * @since	1.6
+	 */
 	protected $_order = null;
 
 	/**
 	 * Clear data from the query or a specific clause of the query.
 	 *
-	 * @param	string	Optionally, the name of the clause to clear, or nothing to clear the whole query.
+	 * @param	string	$clear	Optionally, the name of the clause to clear, or nothing to clear the whole query.
+	 *
+	 * @return	void
+	 * @since	1.6
 	 */
 	public function clear($clause = null)
 	{
-		switch ($clause) {
+		switch ($clause)
+		{
 			case 'select':
 				$this->_select = null;
 				$this->_type = null;
 				break;
+
 			case 'delete':
 				$this->_delete = null;
 				$this->_type = null;
 				break;
+
 			case 'update':
 				$this->_update = null;
 				$this->_type = null;
 				break;
+
 			case 'insert':
 				$this->_insert = null;
 				$this->_type = null;
 				break;
+
 			case 'from':
 				$this->_from = null;
 				break;
+
 			case 'join':
 				$this->_join = null;
 				break;
+
 			case 'set':
 				$this->_set = null;
 				break;
+
 			case 'where':
 				$this->_where = null;
 				break;
+
 			case 'group':
 				$this->_group = null;
 				break;
+
 			case 'having':
 				$this->_having = null;
 				break;
+
 			case 'order':
 				$this->_order = null;
 				break;
+
 			default:
 				$this->_type = null;
 				$this->_select = null;
@@ -172,14 +245,19 @@ class JDatabaseQuery
 
 
 	/**
-	 * @param	mixed	A string or an array of field names
+	 * @param	mixed	$columns	A string or an array of field names.
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function select($columns)
 	{
 		$this->_type = 'select';
+
 		if (is_null($this->_select)) {
 			$this->_select = new JDatabaseQueryElement('SELECT', $columns);
-		} else {
+		}
+		else {
 			$this->_select->append($columns);
 		}
 
@@ -187,43 +265,63 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	mixed	A string or an array of field names
+	 * @param	string	$table	The name of the table to delete from.
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
-	public function delete($tables = null)
+	public function delete($table = null)
 	{
-		$this->_type = 'delete';
-		$this->_delete = new JDatabaseQueryElement('DELETE', $tables);
+		$this->_type	= 'delete';
+		$this->_delete	= new JDatabaseQueryElement('DELETE', null);
+
+		if (!empty($table)) {
+			$this->from($table);
+		}
+
 		return $this;
 	}
 
 	/**
-	 * @param	mixed	A string or array of table names
+	 * @param	mixed	$tables	A string or array of table names.
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function insert($tables)
 	{
-		$this->_type = 'insert';
-		$this->_insert = new JDatabaseQueryElement('INSERT INTO', $tables);
+		$this->_type	= 'insert';
+		$this->_insert	= new JDatabaseQueryElement('INSERT INTO', $tables);
+
 		return $this;
 	}
 
 	/**
-	 * @param	mixed	A string or array of table names
+	 * @param	mixed	$tables	A string or array of table names.
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function update($tables)
 	{
 		$this->_type = 'update';
 		$this->_update = new JDatabaseQueryElement('UPDATE', $tables);
+
 		return $this;
 	}
 
 	/**
-	 * @param	mixed	A string or array of table names
+	 * @param	mixed	A string or array of table names.
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function from($tables)
 	{
 		if (is_null($this->_from)) {
 			$this->_from = new JDatabaseQueryElement('FROM', $tables);
-		} else {
+		}
+		else {
 			$this->_from->append($tables);
 		}
 
@@ -231,8 +329,11 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	string
-	 * @param	string
+	 * @param	string	$type
+	 * @param	string	$conditions
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function join($type, $conditions)
 	{
@@ -245,7 +346,10 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	string
+	 * @param	string	$conditions
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function innerJoin($conditions)
 	{
@@ -255,7 +359,10 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	string
+	 * @param	string	$conditions
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function outerJoin($conditions)
 	{
@@ -265,7 +372,10 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	string
+	 * @param	string	$conditions
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function leftJoin($conditions)
 	{
@@ -275,7 +385,10 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	string
+	 * @param	string	$conditions
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function rightJoin($conditions)
 	{
@@ -285,15 +398,19 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	mixed	A string or array of conditions
-	 * @param	string
+	 * @param	mixed	$conditions	A string or array of conditions.
+	 * @param	string	$glue
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function set($conditions, $glue=',')
 	{
 		if (is_null($this->_set)) {
 			$glue = strtoupper($glue);
 			$this->_set = new JDatabaseQueryElement('SET', $conditions, "\n\t$glue ");
-		} else {
+		}
+		else {
 			$this->_set->append($conditions);
 		}
 
@@ -301,15 +418,19 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	mixed	A string or array of where conditions
-	 * @param	string
+	 * @param	mixed	$conditions	A string or array of where conditions.
+	 * @param	string	$glue
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function where($conditions, $glue='AND')
 	{
 		if (is_null($this->_where)) {
 			$glue = strtoupper($glue);
 			$this->_where = new JDatabaseQueryElement('WHERE', $conditions, " $glue ");
-		} else {
+		}
+		else {
 			$this->_where->append($conditions);
 		}
 
@@ -317,13 +438,17 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	mixed	A string or array of ordering columns
+	 * @param	mixed	$columns	A string or array of ordering columns.
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function group($columns)
 	{
 		if (is_null($this->_group)) {
 			$this->_group = new JDatabaseQueryElement('GROUP BY', $columns);
-		} else {
+		}
+		else {
 			$this->_group->append($columns);
 		}
 
@@ -331,15 +456,19 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	mixed	A string or array of columns
-	 * @param	string
+	 * @param	mixed	$conditions	A string or array of columns.
+	 * @param	string	$glue
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function having($conditions, $glue='AND')
 	{
 		if (is_null($this->_having)) {
 			$glue = strtoupper($glue);
 			$this->_having = new JDatabaseQueryElement('HAVING', $conditions, " $glue ");
-		} else {
+		}
+		else {
 			$this->_having->append($conditions);
 		}
 
@@ -347,13 +476,17 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @param	mixed	A string or array of ordering columns
+	 * @param	mixed	$columns	A string or array of ordering columns.
+	 *
+	 * @return	JDatabaseQuery	Returns this object to allow chaining.
+	 * @since	1.6
 	 */
 	public function order($columns)
 	{
 		if (is_null($this->_order)) {
 			$this->_order = new JDatabaseQueryElement('ORDER BY', $columns);
-		} else {
+		}
+		else {
 			$this->_order->append($columns);
 		}
 
@@ -361,13 +494,17 @@ class JDatabaseQuery
 	}
 
 	/**
-	 * @return	string	The completed query
+	 * Magic function to convert the query to a string.
+	 *
+	 * @return	string	The completed query.
+	 * @since	1.6
 	 */
 	public function __toString()
 	{
 		$query = '';
 
-		switch ($this->_type) {
+		switch ($this->_type)
+		{
 			case 'select':
 				$query .= (string) $this->_select;
 				$query .= (string) $this->_from;
@@ -377,48 +514,60 @@ class JDatabaseQuery
 						$query .= (string) $join;
 					}
 				}
+
 				if ($this->_where) {
 					$query .= (string) $this->_where;
 				}
+
 				if ($this->_group) {
 					$query .= (string) $this->_group;
 				}
+
 				if ($this->_having) {
 					$query .= (string) $this->_having;
 				}
+
 				if ($this->_order) {
 					$query .= (string) $this->_order;
 				}
+
 				break;
 
 			case 'delete':
 				$query .= (string) $this->_delete;
 				$query .= (string) $this->_from;
+
 				if ($this->_join) {
 					// special case for joins
 					foreach ($this->_join as $join) {
 						$query .= (string) $join;
 					}
 				}
+
 				if ($this->_where) {
 					$query .= (string) $this->_where;
 				}
+
 				break;
 
 			case 'update':
 				$query .= (string) $this->_update;
 				$query .= (string) $this->_set;
+
 				if ($this->_where) {
 					$query .= (string) $this->_where;
 				}
+
 				break;
 
 			case 'insert':
 				$query .= (string) $this->_insert;
 				$query .= (string) $this->_set;
+
 				if ($this->_where) {
 					$query .= (string) $this->_where;
 				}
+
 				break;
 		}
 
